# fastapi-studies

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  rds.py  redis.conf  requirements.txt  start.sh  temp.py
data/: movies.csv
data_storage/: inserting.py  movies.csv  reading.py  upload.py
fastapi_studies/: main.py
fastapi_studies/api/: app.py  config.py
fastapi_studies/api/dependencies/: __init__.py  setup.py  stub.py
fastapi_studies/api/exception_handlers/: __init__.py  movie.py
fastapi_studies/api/routers/: movies.py  setup.py  users.py
fastapi_studies/api/routers/common/: paginator.py
fastapi_studies/api/routers/movie/: paginator.py  request.py  response.py  router.py
fastapi_studies/api/routers/movie/request/: __init__.py  movie.py
fastapi_studies/api/routers/movie/response/: __init__.py  movie.py
fastapi_studies/api/routers/request/: __init__.py  movie.py  pagination.py
fastapi_studies/api/routers/response/: pagination.py
fastapi_studies/api/routers/users/: router.py
fastapi_studies/application/movie/: common.py  constants.py  exceptions.py  interfaces.py  models.py  services.py
fastapi_studies/infrastructure/config_loader/: config_loader.py
fastapi_studies/infrastructure/converters/: __init__.py  movie.py
fastapi_studies/infrastructure/database/: config.py  connection.py  models.py  repositories.py
fastapi_studies/infrastructure/redis/: client.py  config.py  repositories.py
src/fastapi_studies/api/: app.py
src/fastapi_studies/api/dependencies/: __init__.py  setup.py  stub.py
src/fastapi_studies/api/exception_handlers/: movie.py  setup.py
src/fastapi_studies/api/routers/: __init__.py  setup.py
src/fastapi_studies/api/routers/movie/: request.py  response.py  router.py
src/fastapi_studies/api/routers/user/: response.py  router.py
src/fastapi_studies/application/movie/: common.py  constants.py  interfaces.py  services.py
src/fastapi_studies/infrastructure/config_loader/: __init__.py  config_loader.py
src/fastapi_studies/infrastructure/database/: connection.py  models.py  repositories.py
src/fastapi_studies/infrastructure/migrations/: env.py
src/fastapi_studies/infrastructure/redis/: client.py  config.py  repositories.py
src/upload_data/: __main__.py  inserting.py  upload.py
tests/: conftest.py  mocks.py  test_movie_router.py  test_user_router.py
(+1 files in other folders)
