[tool.poetry]
name = "fastapi-studies"
version = "0.1.0"
description = ""
authors = ["Shiiq <anjunatown@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["uvicorn"], version = "^0.109.0"}
redis = "^5.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
setuptools = "^69.0.3"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
aiosqlite = "^0.19.0"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
orjson = "^3.9.12"
mypy = "^1.8.0"
httpx = "^0.26.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
